# AuxPowCoin

./: .gitignore  .travis.yml  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  configure~  libapcoinconsensus.pc.in
.gitjunk/: config  index  packed-refs
.tx/: config
build-aux/m4/: bitcoin_find_bdb53.m4  bitcoin_qt.m4  bitcoin_subdir_to_include.m4
contrib/: gitian-build.sh  mincoin-cli.bash-completion  mincoin-qt.pro  mincoin-tx.bash-completion  mincoind.bash-completion  tidy_datadir.sh
contrib/debian/: rules
contrib/devtools/: README.md  check-doc.py  copyright_header.py  git-subtree-check.sh  github-merge.py  optimize-pngs.py  security-check.py  test-security-check.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx.yml  (+1 more)
doc/: README.md  README_osx.md  REST-interface.md  bips.md  build-openbsd.md  build-osx.md  developer-notes.md  fuzzing.md  gitian-building.md  release-notes.md  release-process.md  shared-libraries.md
qa/: README.md
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addrman.h  amount.cpp  amount.h  apcoin-cli.cpp  apcoin-tx.cpp  apcoin.sublime-project  apcoin.sublime-workspace  apcoind.cpp  arith_uint256.h  auxpow.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  cuckoocache.h  dbwrapper.h  hash.h  httprpc.h  (+62 more)
src/bench/: .gitignore  bench.h  ccoins_caching.cpp  verify_script.cpp
src/bench/data/: block413567.raw
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.h  policy.h  rbf.h
src/primitives/: block.cpp  block.h  mincoin.sublime-project  mincoin.sublime-workspace  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  apcoin.cpp  apcoin.qrc  apcoin_locale.qrc  apcoinaddressvalidator.cpp  apcoinaddressvalidator.h  apcoinamountfield.cpp  apcoinamountfield.h  apcoingui.cpp  apcoingui.h  apcoinunits.cpp  apcoinunits.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoinstrings.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  (+52 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: apcoin_af.ts  apcoin_af_ZA.ts  apcoin_ar.ts  apcoin_be_BY.ts  apcoin_bg.ts  apcoin_bg_BG.ts  apcoin_ca.ts  apcoin_ca@valencia.ts  apcoin_ca_ES.ts  apcoin_cs.ts  apcoin_cy.ts  apcoin_da.ts  apcoin_de.ts  apcoin_el.ts  apcoin_el_GR.ts  apcoin_en.ts  apcoin_en_GB.ts  apcoin_eo.ts  apcoin_es.ts  apcoin_es_AR.ts  apcoin_es_CL.ts  apcoin_es_CO.ts  apcoin_es_DO.ts  apcoin_es_ES.ts  apcoin_es_MX.ts  apcoin_es_UY.ts  apcoin_es_VE.ts  apcoin_et.ts  apcoin_et_EE.ts  apcoin_eu_ES.ts  apcoin_fa.ts  apcoin_fa_IR.ts  apcoin_fi.ts  apcoin_fr.ts  apcoin_fr_CA.ts  apcoin_fr_FR.ts  apcoin_gl.ts  apcoin_he.ts  apcoin_hi_IN.ts  apcoin_hr.ts  (+46 more)
src/qt/res/: mincoin-qt-res.rc
src/qt/test/: compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: apcoinconsensus.cpp  apcoinconsensus.h  interpreter.cpp  interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: us_mincoin_NativeSecp256k1.c  us_mincoin_NativeSecp256k1.h  us_mincoin_Secp256k1Context.c  us_mincoin_Secp256k1Context.h
src/secp256k1/src/java/us/mincoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  auxpow_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bip32_tests.cpp  bitcoin-util-test.py  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+23 more)
src/test/data/: README.md  bitcoin-util-test.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: coincontrol.h  crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+119 files in other folders)
